fixed drag and drop overlap

--- a/css/main.css
+++ b/css/main.css
@@ -57,7 +57,7 @@ body {
 .drop-zone {
 	width: 49.5%;
 	height: 49.5%;
-	/* border: thin dashed white; */
+	border: thin dashed white;
 	float: left;
 	position: relative;
 }
@@ -66,7 +66,7 @@ body {
 	float: none;
 	padding: 0;
 	position: absolute;
-	width: 90%;
+	width: 100%;
 }
 
 .tl img { right: 0; bottom: 0; }
